Inserindo os inputs de acordo com o botão de adicionar

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -235,25 +235,24 @@
                           <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                         </label>
                       </div>
-                      <label>Quantidade
+                      <label id="labelQuantity">Quantidade
                         <input id="" type="text" placeholder=""/>
                         <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                       </label>
                     </div>
                     <div class="price-total">
-                      <label>Preço unid.
+                      <label id="labelPrice">Preço unid.
                         <input id="price" type="text" placeholder=""/>
                         <p id="alerta_precounidade" style="display: none;">O Campo precisa ser preenchido</p>
                       </label>
-                      <label>Total
+                      <label id="labelTotal">Total
                         <input id="total" type="text" placeholder=""/>
                         <p id="alerta_total" style="display: none;">O Campo precisa ser preenchido</p>
                       </label>
-                      <label class="production-available">Produção recomendada
+                      <label class="production-available" id="labelProductionRecommended">Produção recomendada
                         <input id="production-available" type="text" placeholder="" disabled/>
                         <p id="alerta_production-available" style="display: none;">O Campo precisa ser preenchido</p>
-                        <button type="button">
-                          Adicionar</button>
+                        <button type="button" id="buttonAdd">  Adicionar</button> //ESSA LINHA
                       </label>
                     </div>
                   </div>
