Adicionado icons da tela de relatorios de produtos

--- a/reports_product.html
+++ b/reports_product.html
@@ -198,7 +198,7 @@
         </section>
         <section class="navbar">
           <div class="icons">
-            <img src="./images/outline_manage_accounts_white_48dp.png" alt="" width="22">
+            <img src="./images/trip_origin_white_36dp.svg" alt="" width="40">
           </div>
         </section>
     
