--- a/sale_registration.html
+++ b/sale_registration.html
@@ -252,11 +252,13 @@
                       <label class="production-available" id="labelProductionRecommended">Produção recomendada
                         <input id="production-available" type="text" placeholder="" disabled/>
                         <p id="alerta_production-available" style="display: none;">O Campo precisa ser preenchido</p>
-                        <button type="button" id="buttonAdd">  Adicionar</button> //ESSA LINHA
                       </label>
                     </div>
                   </div>
-                  <div class="total-general-2" id="boxproduct">
+                    <div class="botaoadicionar">
+                      <button type="button" id="buttonAdd">  Adicionar</button>
+                    </div>
+                    <div class="total-general-2" id="boxproduct">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
                       <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
