colocando scroll no modal

--- a/historic.html
+++ b/historic.html
@@ -180,28 +180,20 @@
 
         <!--Tabela -> Gerenciamento de Usuarios-->
         <section class="section-table" >
-          <table id="myTable" class="table">
-            <thead>
-                <tr>
-                    <th>Datas</th>
-                    <th>Descrição</th>
-                    <th>Usuário</th>
-                </tr>
-            </thead>
-            <tbody id="tablebody"></tbody>
-           <!-- <tbody id="">
-             <tr>
-                <td>12/08/2021</td>
-                <td id="descricao">---------------------------------------------</td>
-                <td>Wesley Eugênio</td>
-              </tr>
-              <tr>
-                <td>13/08/2021</td>
-                <td id="descricao">---------------------------------------------</td>
-                <td>Palloma Ruysa</td>
-              </tr>
-           </tbody> -->
-          </table>       
+         
+          <div id="div-table">
+            <table id="myTable" class="table">
+              <thead>
+                  <tr>
+                      <th>Datas</th>
+                      <th>Descrição</th>
+                      <th>Usuário</th>
+                  </tr>
+              </thead>
+                <tbody id="tablebody"></tbody>
+            </table> 
+          </div>
+                
         </section>
 
       </section>
