Botao adicionar da tela de cadastro de vendas estilizado

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -255,7 +255,7 @@
                       </label>
                     </div>
                   </div>
-                    <div class="botaoadicionar">
+                    <div class="button-adc">
                       <button type="button" id="buttonAdd">  Adicionar</button>
                     </div>
                     <div class="total-general-2" id="boxproduct">
