Tela de relatorios de produtos FRONT_END <PRONTA>

--- a/reports_product.html
+++ b/reports_product.html
@@ -188,17 +188,27 @@
             </div>
           </section>
           <section>
-          <div class="graphics-double">  
-            <canvas id="grafico"></canvas>
-            <canvas id="grafico2"></canvas> 
-          </div>
-          <div class="graphics-single">  
-            <canvas id="grafico3"></canvas>
-          </div>
+            <div class="graphics-single">  
+              <canvas id="grafico3"></canvas>
+            </div>
+            <div class="graphics-single"> 
+              <canvas id="grafico"></canvas>
+            </div>
+            <div class="graphics-single"> 
+              <canvas id="grafico2"></canvas> 
+            </div>
         </section>
         <section class="navbar">
           <div class="icons">
-            <img src="./images/trip_origin_white_36dp.svg" alt="" width="40">
+            <button type="button" class="btn-graphics">
+              <img src="./images/leaderboard_white_24dp.svg" alt="" width="50">
+            </button>
+            <button type="button" class="btn-graphics">
+              <img src="./images/show_chart_white_24dp.svg" alt="" width="50">
+            </button>
+            <button type="button" class="btn-graphics">
+              <img src="./images/trip_origin_white_36dp.svg" alt="" width="50">
+            </button>
           </div>
         </section>
     
