--- a/settings_user.html
+++ b/settings_user.html
@@ -191,21 +191,25 @@
             <section class="column-img-btn">
                 <section class="register">
                     <div class="btn-group">
-                        <button class="btn btn-primary" id="btn_salvar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">SALVAR</button>
+                      <button class="btn btn-primary" id="btn_salvar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">SALVAR</button>
                     </div>
                 </section>
-                <div class="modal" id="checked" data-bs-backdrop="static">
-                <div class="modal-dialog">
-                    <div class="modal-content modal-lg">
-                        <div class="modal-header modal-lg">
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body modal-dialog modal-lg">
-                            <img src="images/GREEN-checked.png" alt="">
-                            <h1>Alteração realizada com sucesso!</h1>
-                            <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'home.html'">IR PARA TELA INICIAL</button>
-                        </div>
+                <!-- Modal Checked -->
+                <div class="modal fade" id="checked" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="button-close">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <form>
+                          <img src="images/GREEN-checked.png" alt="" width="50%"/>
+                          <h1>Alteração realizada com sucesso!</h1>
+                          <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'home.html'">IR PARA TELA INICIAL</button>
+                        </form>
+                      </div>
                     </div>
+                  </div>
                 </div>
             </section>
         </section>
