adicionando scroll na table

--- a/historic.html
+++ b/historic.html
@@ -180,14 +180,18 @@
 
         <!--Tabela -> Gerenciamento de Usuarios-->
         <section class="section-table" >
-         
+         <div id="div-title">
+              <div id="data"><h4>Datas</h4></div>
+              <div id="desc"><h4>Descrição</h4></div>
+              <div id="user"><h4>Usuário</h4></div>
+         </div>
           <div id="div-table">
             <table id="myTable" class="table">
               <thead>
                   <tr>
-                      <th>Datas</th>
-                      <th>Descrição</th>
-                      <th>Usuário</th>
+                      <th></th>
+                      <th></th>
+                      <th></th>
                   </tr>
               </thead>
                 <tbody id="tablebody"></tbody>
