Consertado icone do botao do usuario cadastrado da tela de historico

--- a/historic.html
+++ b/historic.html
@@ -183,7 +183,7 @@
          <div id="div-title">
               <div id="data"><h4>Datas</h4></div>
               <div id="desc"><h4>Descrição</h4></div>
-              <div id="user"><h4>Usuário</h4></div>
+              <div id="user-table"><h4>Usuário</h4></div>
          </div>
           <div id="div-table">
             <table id="myTable" class="table">
