Texto adicionado no modal de suporte na tela de historico

--- a/historic.html
+++ b/historic.html
@@ -185,10 +185,8 @@
                     </div>
                     <div class="modal-body">
                       <form>
-                        <h5>Para realizar cadastro de um usuário, você deverá seguir os seguintes passos: </h5>
-                        <h6>• Inserir os dados em cada campo: nome, sobrenome, usuário e email.</h6>
-                        <h6>• Selecionar uma opção de cargo e nível de acesso.</h6>
-                        <h6>• Para finalizar, você deverá clicar no botão cadastrar.</h6>
+                        <h5>Nesta página, irá ter uma tabela com datas, descrição e usuário.</h5>
+                        <h6>• Você terá acesso ao que foi modificado no sistema, por quem de acordo com a data.</h6>
                         <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
                       </form>
                     </div>
