Novo modal de Confirmado da tela de cadastro de usuario

--- a/user_registration.html
+++ b/user_registration.html
@@ -258,6 +258,24 @@
     </div>
   </div> 
 </div>
+
+<!-- MODAL DE CADASTRAR -->
+<div id="modal-reg" class="loader2">
+
+  <div class="mod">
+    <div class="top-modal">
+      <button class="fechar"></button>
+    </div>
+    <div class="mod-body">
+      <form>
+        <img src="images/GREEN-checked.png" alt="" width="50%"/>
+        <h1>Usuário cadastrado com sucesso!</h1>
+        <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
+      </form>
+    </div>
+  </div>
+</div>
+
 <script src="script/preloader.js"></script>
 <script type="module" src="script/user_registration.js"></script>
 </body>
