Criação do JavaScript do modal

--- a/user_registration.html
+++ b/user_registration.html
@@ -232,12 +232,12 @@
                   </div>
                   <div class="register">
                     <div class="btn-group">
-                      <button class="btn btn-primary" id="btn_cadastrar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">CADASTRAR</button>
+                      <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
                     </div>
                   </div>
                 </div>
                 <!-- Modal Checked -->
-                <div class="modal fade" id="checked" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <!-- <div class="modal fade" id="checked" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <div class="button-close">
@@ -252,7 +252,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
         </section>
       </section>
     </div>
