Modal checkado da tela de cadastro de usuario <PRONTO>

--- a/user_registration.html
+++ b/user_registration.html
@@ -263,7 +263,7 @@
 <div id="modal-reg" class="loader2">
 
   <div class="mod">
-    <div class="top-modal">
+    <div class="button-close">
       <button class="fechar"></button>
     </div>
     <div class="mod-body">
