--- a/user_registration.html
+++ b/user_registration.html
@@ -236,30 +236,13 @@
                     </div>
                   </div>
                 </div>
-                <!-- Modal Checked -->
-                <!-- <div class="modal fade" id="checked" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                      <div class="button-close">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                        <form>
-                          <img src="images/GREEN-checked.png" alt="" width="50%"/>
-                          <h1>Usuário cadastrado com sucesso!</h1>
-                          <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
-                        </form>
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
         </section>
       </section>
     </div>
   </div> 
 </div>
 
-<!-- MODAL DE CADASTRAR -->
+<!-- MODAL DE CHECKED -->
 <div id="modal-reg" class="loader2">
 
   <div class="mod">
