Ajustado a margem dos graficos da tela de relatorios de produtos

--- a/reports_product.html
+++ b/reports_product.html
@@ -187,7 +187,7 @@
               </div>
             </div>
           </section>
-          <section>
+          <section class="graphics-group">
             <div class="graphics-single">  
               <canvas id="grafico3"></canvas>
             </div>
