--- a/product_registration.html
+++ b/product_registration.html
@@ -275,7 +275,7 @@
       <form>
         <img src="images/GREEN-checked.png" alt="" width="50%"/>
         <h1>Produto cadastrado com sucesso!</h1>
-        <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
+        <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'product_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
       </form>
     </div>
   </div>
