modal com novo texto e adc do id nos button

--- a/reports_product.html
+++ b/reports_product.html
@@ -179,6 +179,7 @@
                       <form style="margin-top: 0;">
                         <h5>Nesta página, você terá 3 (três) opções de gráficos.</h5>
                         <h6>• Sendo eles de barra, linear e rosca com base nos produtos e quantidade cadastrados.</h6>
+                        <h6>• Ao lado possui uma sidebar, a qual permite a escolha de qual gráfico deseja que fique à mostra na tela, enquanto os outros serão ocultos.</h6>
                         <h6>• Caso queira sair desta página, clique no "x" acima.</h6>
                       </form>
                     </div>
@@ -200,13 +201,13 @@
         </section>
         <section class="navbar">
           <div class="icons">
-            <button type="button" class="btn-graphics">
+            <button type="button" class="btn-graphics" id="button_bar">
               <img src="./images/leaderboard_white_24dp.svg" alt="" width="50">
             </button>
-            <button type="button" class="btn-graphics">
+            <button type="button" class="btn-graphics" id="button_line">
               <img src="./images/show_chart_white_24dp.svg" alt="" width="50">
             </button>
-            <button type="button" class="btn-graphics">
+            <button type="button" class="btn-graphics" id="button_doughnut">
               <img src="./images/trip_origin_white_36dp.svg" alt="" width="50">
             </button>
           </div>
