--- a/settings_user.html
+++ b/settings_user.html
@@ -194,14 +194,14 @@
                       <button class="btn btn-primary" id="btn_salvar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">SALVAR</button>
                     </div>
                 </section>
-                <!-- Modal Checked -->
-                <div class="modal fade" id="checked" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
+                <!-- MODAL DE CHECKED -->
+                  <div id="modal-reg" class="loader2">
+
+                    <div class="mod">
                       <div class="button-close">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button class="fechar"></button>
                       </div>
-                      <div class="modal-body">
+                      <div class="mod-body">
                         <form>
                           <img src="images/GREEN-checked.png" alt="" width="50%"/>
                           <h1>Alteração realizada com sucesso!</h1>
@@ -210,7 +210,6 @@
                       </div>
                     </div>
                   </div>
-                </div>
             </section>
         </section>
       </section>
