Validação das senhas em andamento

--- a/settings_user.html
+++ b/settings_user.html
@@ -182,10 +182,12 @@
                 <label for="">Senha
                     <input id="senhaAlterada" name="" required="" type="password" placeholder=""/>
                     <p id="alerta_senha" style="display: none;">O Campo precisa ser preenchido</p>
+                    <p class="igual_senha" style="display: none;">As senhas não são iguais</p>
                 </label>
                 <label for="">Confirmar a senha
                     <input id="confirmaSenhaAlterada" name="" required="" type="password" placeholder=""/>
                     <p id="alerta_confrimar_senha" style="display: none;">O Campo precisa ser preenchido</p>
+                    <p class="igual_senha" style="display: none;">As senhas não são iguais</p>
                 </label> 
             </section>
             <section class="column-img-btn">
@@ -194,6 +196,7 @@
                       <button class="btn btn-primary" id="btn_salvar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">SALVAR</button>
                     </div>
                 </section>
+
                 <!-- MODAL DE CHECKED -->
                   <div id="modal-reg" class="loader2">
 
