adc id nos icones da sidebar dos gráficos - em andamento

--- a/reports_product.html
+++ b/reports_product.html
@@ -202,13 +202,13 @@
         <section class="navbar">
           <div class="icons">
             <button type="button" class="btn-graphics" id="button_bar">
-              <img src="./images/leaderboard_white_24dp.svg" alt="" width="50">
+              <img src="./images/leaderboard_white_24dp.svg" alt="" width="50" id="icon_bar">
             </button>
             <button type="button" class="btn-graphics" id="button_line">
-              <img src="./images/show_chart_white_24dp.svg" alt="" width="50">
+              <img src="./images/show_chart_white_24dp.svg" alt="" width="50" id="icon_line">
             </button>
             <button type="button" class="btn-graphics" id="button_doughnut">
-              <img src="./images/trip_origin_white_36dp.svg" alt="" width="50">
+              <img src="./images/trip_origin_white_36dp.svg" alt="" width="50" id="icon_doughnut">
             </button>
           </div>
         </section>
