Ajuste nos modais de usuários e produtos

--- a/product_management.html
+++ b/product_management.html
@@ -237,7 +237,7 @@
     <div class="name">
 
       <label for="">Nome
-        <input id="nome" type="text" placeholder="" disabled/>
+        <input id="nome1" type="text" placeholder="" disabled/>
       </label>
 
     </div>
