--- a/user_management.html
+++ b/user_management.html
@@ -237,7 +237,7 @@
   <form>
     <div class="user-email">
       <label for="">Nome
-        <input id="nome" type="text" placeholder="" disabled/>
+        <input id="nome1" type="text" placeholder="" disabled>
       </label>
       <label for="">Sobrenome
         <input id="sobrenome" type="text" placeholder="" disabled/>
@@ -322,7 +322,7 @@
 </div>
 
 <!-- MODAL DE DELETAR -->
-<div id="modal-delete" class="loader2">
+<!-- <div id="modal-delete" class="loader2">
   <div class="mod">
     <div class="top-modal">
       <h5>Deletar Usuário</h5>
@@ -338,12 +338,12 @@
     </form>
 
   </div>
-</div>
+</div> -->
 
   <!-- SCRIPTS -->
   <script src="script/preloader.js"></script>
   <script type="module" src="script/user_management.js"></script>
-  <script type="module" src="script/modal.js"></script>
+  <!-- <script type="module" src="script/modal.js"></script> -->
 
 </body>
 </html>
