alteração na classe dos modais da tela de encomendas

--- a/orders.html
+++ b/orders.html
@@ -386,7 +386,7 @@
 
 
 <!-- MODAL DE VISUALZAR -->
-<div id="modal-see" class="container">
+<div id="modal-see" class="loader2">
 
   <div class="mod">
     <div class="top-modal">
@@ -453,7 +453,7 @@
 </div>
 
 <!-- MODAL DE EDITAR -->
-<div id="modal-edit" class="container">
+<div id="modal-edit" class="loader2">
 
   <div class="mod">
     <div class="top-modal">
