--- a/storage.html
+++ b/storage.html
@@ -351,7 +351,7 @@
 
   <!-- SCRIPTS -->
   <script src="script/preloader.js"></script>
-  <script type="module" src="script/historic.js"></script>
+  <script type="module" src="script/storage.js"></script>
   <!-- <script type="module" src="script/modal.js"></script> -->
 
 </body>
