--- a/settings_user.html
+++ b/settings_user.html
@@ -93,6 +93,16 @@
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                 <div class="set1">
+                  <img src="./images/storage_white_24dp.svg" alt="" width="22">
+                  <li><a href="storage.html" class="link-dark rounded">Estoque</a></li>
+                </div>
+              </button>
+            </li>
+          </div>
+          <div class="mb">
+            <li class="mb-1">
+              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                <div class="set1">
                   <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
                   <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
                 </div>
