botao de deletar adicionado na tela de gerenciamento de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -261,9 +261,15 @@
                   
                     </div>
                   </div>
+                  <div class="buttons">
                     <div class="button-adc">
-                      <button type="button" id="buttonAdd">  Adicionar</button>
+                      <button type="button" id="buttonAdd">Adicionar</button>
                     </div>
+                    <div class="button-del">
+                      <button type="button" id="buttonDel">Deletar</button>
+                    </div>
+                  </div>
+
                     <div class="total-general-2" id="boxproduct">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
