botao de Confirmar adicionado na tela de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -270,6 +270,12 @@
                     </div>
                   </div>
 
+                  <div class="register">
+                    <div class="btn-group" style="padding-top: 18px; width: 20%;">
+                      <button class="btn btn-primary" id="btn_cadastrar" type="button">CONFIRMAR</button>
+                    </div>
+                  </div>
+
                     <div class="total-general-2" id="boxproduct">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
