Funcionamento da tela 1 de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -211,7 +211,7 @@
             </ul>
             <div class="tab-content" id="myTabContent" style="width: 100%;">
               <div class="tab-pane fade show" id="product" role="tabpanel" aria-labelledby="product-tab">
-                <div class="form">
+                <div class="form" id="options">
                   <h5 class="sale">Tipo de Venda</h5>
                 <div class="public-order">
                   <label>
@@ -222,7 +222,7 @@
                   </label>
                   </div>
                 </div>
-                <div class="form">
+                <div class="form" id="container">
                   <div class="seller-date" id="boxdate">
                     <label>Vendedor
                       <input id="seller" type="text" placeholder="" disabled/>
@@ -272,7 +272,7 @@
 
                   <div class="register">
                     <div class="btn-group" style="padding-top: 18px; width: 20%;">
-                      <button class="btn btn-primary" id="btn_cadastrar" type="button">CONFIRMAR</button>
+                      <button class="btn btn-primary" id="btn_confirmar" type="button">CONFIRMAR</button>
                     </div>
                   </div>
 
