--- a/sale_registration.html
+++ b/sale_registration.html
@@ -232,7 +232,15 @@
                       <input id="date" type="date" placeholder=""/>
                       <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
+                    <div class="total-general-3">
+                      <label>Total geral
+                        <input id="total-general" type="text" placeholder=""/>
+                        <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
+                      </label>
+                    </div>
                   </div>
+                  <div class="title"></div>
+                  <h6>Produtos adicionados</h6>
                   <div class="p-t-q-p-t" id="boxsale">
                     <div class="product-type-quantity">
                       <div class="product">
