Formatação da forma de pagamento tela de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -324,8 +324,12 @@
                 <label>Valor total
                   <input id="total-value" type="text" placeholder=""/>
                   <p id="alerta_valortotal" style="display: none;">O Campo precisa ser preenchido</p>
-                  <button type="button">Adicionar</button>
                 </label>
+              </div>
+            </div>
+            <div class="buttons" style="margin-top: -18px;">
+              <div class="button-adc">
+                <button type="button" id="buttonAdd">Adicionar</button>
               </div>
             </div>
             <div class="total-paid" id="boxpayment">
