Criação de estoque

--- a/storage.html
+++ b/storage.html
@@ -218,14 +218,15 @@
                     <th>Valor total</th>
                   </tr>
               </thead>
-                <tbody id="tablebody">
+              <tbody id="tablebody"></tbody>
+                <!-- <tbody id="tablebody">
                   <tr>
                     <th id="nome">coxinha</th>
                     <th id="tipo">frango</th>
                     <th id="quantidadedisponivel" style="text-align: center;">123123</th>
                     <th id="valortotal">R$ 100,00</th>
                   </tr>
-                </tbody>
+                </tbody> -->
             </table> 
           </div>
                 
