modal alert adicionado na tela de cadastro de produtos <FALTA JS, CSS>

--- a/product_registration.html
+++ b/product_registration.html
@@ -291,6 +291,36 @@
   </div>
 </div>
 
+<!-- MODAL DE ALERT 1 -->
+<div id="modal-alert-1" class="loader2">
+  <div class="mod">
+    <div class="top-modal">
+      <button class="fechar"></button>
+    </div>
+    <form>
+      <h3 style="color:black">Esse produto já está cadastrado</h3>
+      <div class="alternative">
+        <button type="button" class="btn btn-primary" id="confirm">OK</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!-- MODAL DE ALERT 2 -->
+<div id="modal-alert-2" class="loader2">
+  <div class="mod">
+    <div class="top-modal">
+      <button class="fechar"></button>
+    </div>
+    <form>
+      <h3 style="color:black">Esse tipo já está cadastrado</h3>
+      <div class="alternative">
+        <button type="button" class="btn btn-primary" id="confirm">OK</button>
+      </div>
+    </form>
+  </div>
+</div>
+
   <!-- CHAMADA DOS SCRIPTS -->
   <script src="script/preloader.js"></script>
   <script type="module" src="script/product_registration.js"></script>
