Modais de alerta estilizados

--- a/product_registration.html
+++ b/product_registration.html
@@ -295,7 +295,7 @@
 <div id="modal-alert-1" class="loader2">
   <div class="mod">
     <div class="top-modal">
-      <button class="fechar"></button>
+      <button class="close"></button>
     </div>
     <form>
       <h3 style="color:black">Esse produto já está cadastrado</h3>
@@ -307,7 +307,7 @@
 <div id="modal-alert-2" class="loader2">
   <div class="mod">
     <div class="top-modal">
-      <button class="fechar"></button>
+      <button class="close"></button>
     </div>
     <form>
       <h3 style="color:black">Esse tipo já está cadastrado</h3>
